Use Java 8 runtime